# people

./: .gitignore
face_detector/: CMakeLists.txt  package.xml
face_detector/src/: faces.cpp
face_detector/test/: face_detector_false_rtest.xml  face_detector_true_rtest.xml
leg_detector/: CMakeLists.txt  package.xml
leg_detector/cfg/: LegDetector.cfg
leg_detector/launch/: filtered_leg_detector.launch
leg_detector/src/: leg_detector.cpp
leg_detector/src/leg_detector/cfg/: LegDetectorConfig.py
people/: package.xml
people_msgs/: CMakeLists.txt  package.xml
people_msgs/msg/: Person.msg
people_tracking_filter/: CMakeLists.txt
people_velocity_tracker/: manifest.xml  package.xml
people_velocity_tracker/msg/: PersonPositionAndVelocity.msg
people_velocity_tracker/src/: static.py  tracker.py  tracker_dist.py
social_costmap_plugin/: CMakeLists.txt  costmap_plugins.xml  manifest.xml
social_costmap_plugin/cfg/: SocialCostmap.cfg
social_costmap_plugin/include/social_costmap_plugin/: social_costmap_plugin.h
social_costmap_plugin/src/: social_costmap_plugin.cpp
social_navigation_layers/: CMakeLists.txt  package.xml
social_navigation_layers/include/social_navigation_layers/: proxemic_layer.h  social_layer.h
social_navigation_layers/src/: proxemic_layer.cpp  social_layer.cpp
