<package>
  <name>face_detector</name>
  <version>0.0.0</version>
  <description>
  Face detection in images
  </description>
  <author>Caroline Pantofaru</author>
  <maintainer email="davidlu@wustl.edu">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/face_detector</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rostest</run_depend>

</package>


