<package>
  <name>people_msgs</name>
  <version>0.0.0</version>
  <description>
  people_msgs
  </description>
  <author>Caroline Pantofaru</author>
  <maintainer email="davidlu@wustl.edu">David Lu</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/people_msgs</url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>


